--- a/proj_report_outline.tex
+++ b/proj_report_outline.tex
@@ -126,9 +126,10 @@
 \usepackage{soul}
 
 \usepackage{tikz}
-\usetikzlibrary{shapes}
+\usetikzlibrary{shapes, positioning}
 \tikzstyle{every node}=[circle, draw, fill=black,
 		   inner sep=0pt, minimum width=5pt]
+\tikzset{every label/.append style={anchor=mid, inner sep=0pt}}
 
 \usepackage{subcaption}
 
