tensorssssss pretty keen to finish this up. May need to redo xor figure though

--- a/proj_report_outline.tex
+++ b/proj_report_outline.tex
@@ -10,7 +10,9 @@
               ]{report}
 
 
-\usepackage{float} % lets you have non-floating floats
+\usepackage{floatrow}
+\newfloatcommand{capbtabbox}{table}[][\FBwidth]
+
 
 \usepackage{url} % for typesetting urls
 
